# monado-frame

./: .gitignore  Cargo.toml  README.md  build.rs  picsur.env.example  translate.env.example
src/: blocker.rs  config.rs  main.rs  mathx.rs  picsur.rs  shots.rs  translate.rs
